--- a/nginx_configMap.yaml
+++ b/nginx_configMap.yaml
@@ -11,7 +11,7 @@ data:
       error_log  /var/log/nginx/error.log;
       access_log /var/log/nginx/access.log;
       
-      root /so/app/public;
+      root /soo/app/public;
       location / {
           try_files $uri $uri/ /index.php?$query_string;
       }
