--- a/nginx_service.yaml
+++ b/nginx_service.yaml
@@ -10,8 +10,8 @@ spec:
     - protocol: TCP
       port: 80
       targetPort: 80
-      nodePort: 32320
+      nodePort: 32321
   selector:
     tier: backend
     app: nginx
-  type: LoadBalancer
+  type: NodePort
