--- a/nginx_configMap.yaml
+++ b/nginx_configMap.yaml
@@ -13,7 +13,8 @@ data:
       
       root /soo/app/public;
       location / {
-          try_files $uri $uri/ /index.php?$query_string;
+          ##try_files $uri $uri/ /index.php?$query_string;
+          try_files $uri $uri/ /index.php?q=$uri&$args;
       }
       
       location ~ .php$ {
