--- a/nginx_configMap.yaml
+++ b/nginx_configMap.yaml
@@ -14,7 +14,7 @@ data:
       root /soo/app/public;
       location / {
           ##try_files $uri $uri/ /index.php?$query_string;
-          try_files $uri $uri/ /index.php?q=$uri&$args;
+          try_files $uri $uri/ /index.php?$query_string=$uri&$args;
       }
       
       location ~ .php$ {
